<resources>
    <string name="app_name">Jornada Tres</string>
    <string name="title_activity_menu_drawer">MenuDrawer</string>

    <string name="miperfil">Mi perfil</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nombrecompl">Nombre completo</string>
    <string name="fechan">Fecha de nacimiento</string>
    <string name="correoelc">Correo electronico</string>
    <string name="fechaven">Fecha vencimiento de licencia de consucción</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_registro_autos">RegistroAutosActivity</string>
    <string name="placaDos">Placa</string>
    <string name="ciudad">Ciudad</string>
    <string name="modelo">Modelo</string>
    <string name="fechasoat">Fecha SOAT</string>

    <array name="colors">
        <item>Selecciona el color</item>
        <item>Amarillo</item>
        <item>Azulberde</item>
        <item>Blanco</item>
        <item>Cafe</item>
        <item>Gris</item>
        <item>Marron</item>
        <item>Morado</item>
        <item>Naranja</item>
        <item>Negro</item>
        <item>Rojo</item>
        <item>Verde</item>
    </array>

    <array name="marcas">
        <item>Seleciona la marca</item>
        <item>Audi</item>
        <item>Fiat</item>
        <item>Alfaromero</item>
    </array>
    <string name="title_activity_servicios">ServiciosActivity</string>
    <string name="serv1">Renovación de SOAP</string>
    <string name="serv2">Revisión tecno-mecanica</string>
    <string name="serv3">Pago de impuesto del vehiculo</string>
    <string name="serv4">Pico y placa</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="marca">Marca</string>
    <string name="placa">Placa</string>
    <string name="stringVacio"></string>
    <string name="renovacionsoap">Renovación SOAP</string>
    <string name="proximoseventos">Proximos eventos</string>
    <string name="revisiontecnomecanica">Revisión tecno-mecánica</string>
    <string name="pagoimpuesto">Pago impuesto vehicular</string>

</resources>
